tests/semantic/pass/tentative-redefinition.c
int a;
int b;
// redefinition of a
int a;

int main() { }
