tests/semantic/fail/illegal_types3.c
int *ffp()();           // a function returning a function returning an int pointer (ILLEGAL)
